# SimilarSongsFinder

./: README.md  docker-compose.yml  pyproject.toml
app/: config.py  exceptions.py  main.py
app/auth/: client.py  router.py
app/finder/: clients.py  recommendations_schema.py  router.py  schema.py
