[tool.poetry]
name = "similarsongsfinder-clone"
version = "0.1.0"
description = ""
authors = ["ScrollDude <stepakinoyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
spotipy = "^2.23.0"
requests = "^2.31.0"
black = "^24.3.0"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
